--- a/proyectoWeb2/index.html
+++ b/proyectoWeb2/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Lit</title>
-    <link rel="stylesheet" href="./src/index.css" />
-    <script type="module" src="/src/my-element.js"></script>
+    <title>CampusShop</title>
+    <link rel="stylesheet" href="./src/main.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <script type="module" src="./src/main.js"></script>
+
   </head>
   <body>
     <my-element>
-      <h1>Vite + Lit</h1>
     </my-element>
   </body>
 </html>
